updated frontend to match backend semantics

--- a/frontend/secrets.html
+++ b/frontend/secrets.html
@@ -10,14 +10,14 @@
 	<script src="secrets.js"></script>	
 </head>
 
-<body>
+<body onload="init()">
 	<h1>secrets</h1><h3> by Leif Wesche</h3>
 	<br><br>
 
 	<div class="center">
 		<div class="col">
-			<label>User Name:<br><input type="text" id="usr_txt" value="testusr" class="colorInput"><label>
-			<label>Password:<br><input type="password" id="pwd_txt" class="colorInput"><label>
+			<label>User Name:<br><input type="text" id="usr_txt" value="testusr" class="colorInput"></label>
+			<label>Password:<br><input type="password" id="pwd_txt" class="colorInput"></label>
 			<button id="new_usr_button" onClick="clicked_new_user()">New User</button>
 
 		</div>
@@ -30,11 +30,7 @@
 		</div>
 
 		<div class="col" id="key_col">
-			<label>Secret:<br><input type="text" id="dec_txt" value="" class="colorInput"><label>
-		</div>
-
-		<div class="col" id="key_col">
-			<label>Key:<br><input type="text" id="key_txt" value="test" class="colorInput"><label>
+			<label>Data:<br><input type="text" id="dec_txt" value="" class="colorInput"><label>
 		</div>
 
 		<div class="col" id="idx_col">
@@ -58,12 +54,16 @@
 	<h3 id="notify"></h3>
 	<h3 id="error"></h3>
 
+	<!--
+	<div id="about"></div>
+	-->
+
 	<div class="warning">
 		<h1>
 			Warning
 		</h1>
 		<h3>
-			This is still in development and is not secure. Don't store anything you can't afford to have leak or lose. Don't use your real passwords as keys. 
+			This is still in development and is not stable - data may be reset.  
 		</h3>
 	</div>
 </body>
