added diagram to frontend

--- a/frontend/secrets.html
+++ b/frontend/secrets.html
@@ -54,18 +54,9 @@
 	<h3 id="notify"></h3>
 	<h3 id="error"></h3>
 
-	<!--
-	<div id="about"></div>
-	-->
-
-	<div class="warning">
-		<h1>
-			Warning
-		</h1>
-		<h3>
-			This is still in development and is not stable - data may be reset.  
-		</h3>
+	<div id="about">
 	</div>
+
 </body>
 </html>
 
