Frontend ready for deployment + updated dockerfiles

--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -57,7 +57,7 @@
     
     <div class="floatDummy"></div>
     
-    <button id="go_button" onClick="Lib.wasm_test()">Go</button>
+    <button id="go_button" onClick="Lib.clicked_go()">Go</button>
 
     <br><br>
     <div id="table_div">    
