--- a/frontend/src/template.html
+++ b/frontend/src/template.html
@@ -18,8 +18,8 @@
 <head>
     <meta charset="utf-8">
     <title>Lewesche</title>
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="src/secrets.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="secrets.css">
 </head>
 
 <body onload="Lib.init()">
